<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_cita_programada_black"
            android:title="@string/home_item"/>

        <item
            android:id="@+id/nav_horario"
            android:checked="true"
            android:icon="@drawable/ic_add_horario_light"
            android:title="@string/horario_item"/>

        <item
            android:id="@+id/nav_usuario"
            android:checked="true"
            android:icon="@drawable/ic_person_light"
            android:title="@string/usuario_item"/>

        <item
            android:id="@+id/nav_tema"
            android:checked="true"
            android:icon="@drawable/ic_add_tema_light"
            android:title="@string/tema_item"/>

        <item
            android:id="@+id/nav_perfil"
            android:checked="true"
            android:icon="@drawable/ic_person_light"
            android:title="@string/perfil_item"/>

        <item
            android:id="@+id/nav_cerrar_sesion"
            android:checked="true"
            android:icon="@drawable/ic_power_black"
            android:title="@string/cerrar_sesion_item"/>

    </group>

</menu>